--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.47.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
+    "use-state-if-mounted": "^1.0.4",
     "web-vitals": "^2.1.3"
   },
   "proxy": "http://localhost:3100/",
