--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.6",
+    "mongoose-unique-validator": "^3.0.0",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1"
