--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "mongoose-unique-validator": "^3.0.0",
     "nodemon": "^2.0.15",
