--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "mongoose-unique-validator": "^3.0.0",
