Try to fix https

--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,3 +1,4 @@
 {
-    "api_url":"https://socket-tchat.tk:3000"
+    "api_url":"https://socket-tchat.tk:3000",
+    "socket_url":"http://socket-tchat.tk:3000"
 }
