--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Socket-Tchat",
-  "name": "A fast websocket tchat made with ReactJS,ExpressJS and Socket.io",
+  "name": "A fast and safe websocket tchat",
   "icons": [
     {
       "src": "icon-chat.png",
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#8C57E0"
 }
