Fix https && git push

--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,4 +1,4 @@
 {
-    "api_url":"http://socket-tchat.tk:3000",
-    "socket_url":"http://socket-tchat.tk:3000"
+    "api_url":"http://127.0.0.1:3000",
+    "socket_url":"http://127.0.0.1:3000"
 }
